# pnmr-shift

./: CMakeLists.txt  Constants.h  ConvertSelectionString.cpp  Output.cpp  PNMRShift.cpp  PNMRShift.h  README.md  README.windows  ReadFile.cpp  SimpleMatrix.h  ThrowStream.h  XYZFile.cpp  XYZFile.h  gFind.cpp  i686-w64-mingw32.toolchain
examples/NiCp2/: 3NiCp2-adf-pbe0-QZ4P_jcpl-atens.out  3NiCp2-adf-pbe0-QZ4P_jcpl-atens.pbs  3NiCp2-adf-pbe0-QZ4P_jcpl-gtens.out  3NiCp2-adf-pbe0-QZ4P_jcpl-gtens.pbs  3NiCp2-adf-pbe0-QZ4P_jcpl-orb.out  3NiCp2-adf-pbe0-QZ4P_jcpl-orb.pbs  3NiCp2-adf-pbe0-QZ4P_jcpl-scf.out  3NiCp2-adf-pbe0-QZ4P_jcpl-scf.pbs  README  geo.xyz  pnmr.nod.out.ref  pnmr.out.ref  pnmr_25K.out.ref  pnmrshift.inp  pnmrshift.nod.inp  run_PNMRShift  run_PNMRShift.bat
examples/O2/: ADF-o2triplet-rot-atens.out  ADF-o2triplet-rot-atens.sh  ADF-o2triplet-rot-gtens.out  ADF-o2triplet-rot-gtens.sh  ADF-o2triplet-rot-orb.out  ADF-o2triplet-rot-orb.sh  ADF-o2triplet-rot-scf.out  ADF-o2triplet-rot-scf.sh  README  geo.xyz  pnmr.nod.out.ref  pnmr.out.ref  pnmrshift.inp  pnmrshift.nod.inp  run_PNMRShift  run_PNMRShift.bat  run_calculation
lapack/: CMakeLists.txt
latex-doc/: build  manual-pnmrshift.tex  manual-pnmrshift.toc
linux/: PNMRShift
